Add user creation feature with validation and UI updates
Introduces a new CreateUserView for adding users with input validation and a loading state. Adds the uploadNewUser service for backend integration. Updates UserEditView with improved validation, loading overlay, and error handling. UserListView now includes a prominent button to create new users. Localizable strings updated for new UI elements.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -138,6 +138,9 @@
     "Benutzerdaten" : {
 
     },
+    "Bitte warten..." : {
+
+    },
     "cancel" : {
       "localizations" : {
         "de" : {
@@ -563,6 +566,9 @@
         }
       }
     },
+    "Erstellen" : {
+
+    },
     "ettungshunde" : {
       "shouldTranslate" : false
     },
@@ -699,6 +705,9 @@
         }
       }
     },
+    "Level" : {
+
+    },
     "login" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -817,6 +826,12 @@
           }
         }
       }
+    },
+    "Neuen Benutzer anlegen" : {
+
+    },
+    "Neuen Benutzer erstellen" : {
+
     },
     "no_data_received" : {
       "extractionState" : "manual",
@@ -946,6 +961,9 @@
           }
         }
       }
+    },
+    "Passwort" : {
+
     },
     "phone_number" : {
       "localizations" : {
