Add area calculation and security level features
Introduces an Array extension to calculate area from coordinates, adds security level handling to AppRouter, and updates user data download to set security level. MapView now conditionally shows admin and leadership features based on security level, displays area size in the area sheet, and improves area synchronization by removing outdated local areas. Minor UI and code cleanups included.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -11,9 +11,6 @@
         }
       }
     },
-    "🗺️ Fläche: %@" : {
-
-    },
     "A" : {
       "shouldTranslate" : false
     },
@@ -68,10 +65,8 @@
     "banner_download_all_areas_error" : {
 
     },
-    "banner_download_all_areas_success" : {
-
-    },
     "banner_download_all_gps_data_error" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -88,6 +83,7 @@
       }
     },
     "banner_download_all_gps_data_success" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -552,6 +548,7 @@
       }
     },
     "debug_button" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1308,9 +1305,6 @@
           }
         }
       }
-    },
-    "Punkte:" : {
-
     },
     "R" : {
       "shouldTranslate" : false
