--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -14,6 +14,9 @@
     "A" : {
       "shouldTranslate" : false
     },
+    "Abbrechen" : {
+
+    },
     "accuracy" : {
       "localizations" : {
         "de" : {
@@ -46,6 +49,9 @@
         }
       }
     },
+    "Alle Flächen" : {
+
+    },
     "baner_input_saved_successfully" : {
       "localizations" : {
         "de" : {
@@ -61,9 +67,6 @@
           }
         }
       }
-    },
-    "banner_download_all_areas_error" : {
-
     },
     "banner_download_all_gps_data_error" : {
       "extractionState" : "stale",
@@ -260,6 +263,7 @@
       }
     },
     "banner_user_data_update_success" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -274,6 +278,12 @@
           }
         }
       }
+    },
+    "Beschreibung" : {
+
+    },
+    "Beschreibung: %@" : {
+
     },
     "cancel" : {
       "localizations" : {
@@ -877,6 +887,15 @@
         }
       }
     },
+    "Fläche: n/a" : {
+
+    },
+    "Flächenfarbe auswählen" : {
+
+    },
+    "Flächenverwaltung" : {
+
+    },
     "geographical_coordinates" : {
       "localizations" : {
         "de" : {
@@ -892,6 +911,9 @@
           }
         }
       }
+    },
+    "Hochgeladen: %@" : {
+
     },
     "incorect_user_param" : {
       "localizations" : {
@@ -1092,7 +1114,11 @@
         }
       }
     },
+    "Neue Fläche erstellen" : {
+
+    },
     "no_coordinates_available" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1306,6 +1332,9 @@
         }
       }
     },
+    "Processing" : {
+
+    },
     "R" : {
       "shouldTranslate" : false
     },
@@ -1470,6 +1499,9 @@
         }
       }
     },
+    "Speichern" : {
+
+    },
     "Start" : {
       "localizations" : {
         "de" : {
@@ -1581,6 +1613,9 @@
           }
         }
       }
+    },
+    "Titel" : {
+
     },
     "track_color" : {
       "localizations" : {
