Improve area deletion and download workflows
Refactored deleteAllAreas to use JSON payloads and improved error handling. Added a lock to prevent concurrent area downloads and ensured Core Data context is properly updated after deletions. Enhanced UI in AreasListView with a modal for deleting all areas, and improved map view updates to reflect area changes more reliably.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -607,6 +607,7 @@
       }
     },
     "delete_all_areas_success" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
