Improve area drawing and overlay handling on map
Enhanced CustomMapView to support single-point (circle), line (polyline), and polygon overlays with color support. Refactored area annotation placement and overlay renderer logic. Updated MapView to streamline area management UI, removed 'delete all areas' modal, and improved the area input sheet with a more structured form layout and better state handling for drawing and saving areas.

--- a/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
+++ b/RettungshundeEinsatzApp/Resources/Localizable.xcstrings
@@ -869,6 +869,9 @@
     "ettungshunde" : {
       "shouldTranslate" : false
     },
+    "Farbe und Größe" : {
+
+    },
     "Farbe: %@" : {
 
     },
@@ -887,6 +890,9 @@
           }
         }
       }
+    },
+    "Fläche erstellen" : {
+
     },
     "Fläche: n/a" : {
 
@@ -1114,9 +1120,6 @@
           }
         }
       }
-    },
-    "Neue Fläche erstellen" : {
-
     },
     "no_coordinates_available" : {
       "extractionState" : "stale",
